Bug 1109860 - getBBox incorrect with bidirectional text character. r=heycam